# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  render.yaml  sonar-project.properties
.github/workflows/: sonarqube.yml  tests.yml
task_manager/: admin.py  filters.py  forms.py  models.py  rollbar_middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  tests_status.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_table.py  0002_initial.py  0003_alter_task_table.py  0004_alter_task_author.py
task_manager/templates/: about.html  base.html  index.html  login.html  logout.html  status_delete.html  status_list.html  user_create.html  user_list.html  user_update.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_list.html  label_update.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_list.html  status_update.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html
task_manager/tests/: tests_filters.py  tests_status.py
task_manager/users/: apps.py  forms.py  models.py  tests.py  tests_user.py  urls.py  views.py
(+7 files in other folders)
